# pyfire

./: .gitignore  .pyfire.config.json.example  c_build_and_run.sh  config.json  cpp_build_and_run.sh  go_build_and_run.sh  requirements.txt
samples/: code.py  code.ts
src/: main.py
src/lib/: extensions.py  helpers.py  settings.py
src/parser/: byte-tokens.py  main.py  postfix.py  tokenizer.py  tokens.py
src/parser/ast/: main.py
src/parser/ast/helpers/: expr_declaration.py  func_declaration.py  loop_declaration.py  var_declaration.py
src/parser/morpheum/: main.py  tokenizer.py  tokens.py
src/parser/morpheum/ast/: main.py
src/parser/python/: main.py  tokenizer.py  tokens.py
src/parser/python/ast/: main.py
src/parser/python/ast/helpers/: func_declaration.py  var_declaration.py
src/parser/ts/: main.py  tokenizer.py  tokens.py
src/parser/ts/ast/: main.py
src/translator/c/: CMakeLists.txt  main.py  patterns.py  run.sh  templates.py
src/translator/c/patterns/: basics.py
src/translator/cpp/: main.py  patterns.py  templates.py
src/translator/cpp/scripts/: CMakeLists.txt
src/translator/go/: main.py  patterns.py  templates.py
src/translator/go/builders/: expr_builder.py  func_builder.py  module_builder.py
